Fixing the shooting on mobile and possilby fixing the touch controls

--- a/docs/project/stylesheets/gameMain.css
+++ b/docs/project/stylesheets/gameMain.css
@@ -22,3 +22,7 @@ body {
         display: block;
     }
 }
+
+button{
+    size: 50px;
+}
